2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ns8250.c (do_real_config): Set port->broken to 0.
	(serial_hw_put): Wait based on real time rather than port reads. Don't
	roken ports.
	* include/grub/serial.h (grub_serial_port): New field broken.

2010-10-16  Robert Millan  <rmh@gnu.org>

	* grub-core/kern/emu/misc.c
	(grub_make_system_path_relative_to_its_root): Fix premature return
	when processing non-root ZFS filesystems.
	Reported by Sergio Talens-Oliag.

2010-10-15  Robert Millan  <rmh@gnu.org>

	* util/grub.d/10_linux.in (list): Expand "vmlinu[zx]" instances to
	guarantee compressed ones are processed first.

2010-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/main.c (grub_efiemu_prepare): Handle errors from
	grub_efiemu_autocore.

2010-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (bypass_table): Use 0x1b explicitly
	rather than 0x1b.
	(grub_console_getkey): Use correct jae opcode rather than ja.

2010-10-12  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Merge `GRUB_DISABLE_LINUX_RECOVERY' and
	`GRUB_DISABLE_NETBSD_RECOVERY' into a single `GRUB_DISABLE_RECOVERY'
	variable.  All references updated.

	* util/grub.d/10_kfreebsd.in: Support recovery boot entries.

2010-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Correctly distinguish mdraid flavours.

	* grub-core/disk/raid.c (grub_raid_getname) [GRUB_UTIL]: New function.
	(insert_array): New argument raid.
	* include/grub/disk.h (grub_disk_dev) [GRUB_UTIL]: New member raidname.
	* include/grub/raid.h (grub_raid_array) [GRUB_UTIL]: New member driver.
	* util/grub-probe.c (probe): PRint raidname instead of plainly "mdraid".

2010-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (grub_console_getkey): Fix incorrect
	handling of special keys.

2010-10-02  Aleš Nesrsta <starous@volny.cz>

	* include/grub/scsi.h (grub_make_scsi_id): Fix incorrect usgae of